<resources>
    <string name="app_name">Birthdays</string>
    <string name="action_settings">Settings</string>

    <!-- General -->
    <string name="save">Save</string>
    <string name="in_days">in %1$s days</string>
    <string name="turns">Turns %1$s</string>
    <string name="no_internet">No internet connection!</string>

    <!-- activity_main -->
    <string name="today">Today</string>

    <!-- activity_birthday -->
    <string name="gift_ideas">Gift ideas</string>
    <string name="gifts_given">Gifts given</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="new_gift_idea">New gift idea</string>
    <string name="new_given_gift">New given gift</string>
    <string name="gift_idea_error">Please fill in a gift idea</string>
    <string name="given_gift_error">Please fill in a given gift</string>
    <string name="no_gift_ideas_found">No gift ideas found.</string>
    <string name="no_given_gifts_found">No given gifts found.</string>


    <!-- activity_new_birthday -->
    <string name="birthday_hint">Who\'s birthday?</string>
    <string name="add_image">Add image</string>
    <string name="birthday_date">Set date</string>
    <string name="new_birthday">New birthday</string>
    <string name="name_error">Please fill in a name</string>

    <!-- activity_new_gift -->
    <string name="new_gift_intro">Here you can suggest a new gift to be added to the gifts database used by this app. No personal information will be send to our servers, only the word you add.</string>
    <string name="new_gift_warning">Please make sure your gift is a valid english word and something that could be considered a gift!</string>
    <string name="new_gift_hint">The gift you want to add</string>
    <string name="new_gift_error">Please fill in a gift</string>
    <string name="new_gift_exists">This gift already exists in the database</string>
    <string name="gift_added">Your gift has been added!</string>

    <!-- dialog_present -->
    <string name="new_gift_title">New gift</string>
    <string name="the_gift">The gift</string>

    <!-- activity_export -->
    <string name="export">Copy the text below and save it somewhere safe.</string>
    <string name="copy">Copy to clipboard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
